--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,10 @@ requirements:
   host:
     - python >=3.6
     - pip
+    - setuptools >=42.0
+    - wheel
   run:
+    - importlib_metadata
     - python >=3.6
     - matplotlib-base >=1.4.0
     - numpy
