--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,16 +16,16 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.7
     - pip
     - setuptools >=42.0
     - wheel
   run:
-    - importlib_metadata
     - python >=3.6
     - matplotlib-base >=1.4.0
     - numpy
     - pillow
+    - webcolors
 
 test:
   imports:
