--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,9 +17,13 @@ build:
 requirements:
   host:
     - flit-core >=3.2,<4
+    - matplotlib-base >=1.4.0
+    - numpy
+    - pillow
     - python >=3.7
     - pip
     - setuptools >=42.0
+    - webcolors
     - wheel
   run:
     - python >=3.7
